# serializer version: 1
# name: TestDeepSolid.test_kinetic[imag]
  DeviceArray(0.0, dtype=float32)
# ---
# name: TestDeepSolid.test_kinetic[real]
  DeviceArray(2.67603, dtype=float32)
# ---
# name: TestDeepSolid.test_potential
  DeviceArray(-4.05709, dtype=float32)
# ---
# name: TestDeepSolid.test_walk
  DeviceArray([[[ 3.6101303 ,  0.13946693,  0.82989585,  1.7708621 ,  0.17072193,  0.17384695],
                [ 1.9189657 ,  0.31351727,  0.37731722,  3.5412247 , 98.901505  , 97.24693   ],
                [ 0.25209498, 98.957184  , 99.790825  ,  1.8235291 ,  0.5695312 , 99.80533   ],
                [ 0.18696769, 99.86598   , 98.40442   ,  3.3171842 ,  0.69462645,  0.48239717],
                [ 2.697114  , 99.9651    , 98.81863   ,  1.1161598 , 97.348145  ,  0.73665106],
                [ 3.9124656 , 99.67652   ,  0.45641023,  3.55336   ,  0.47175992,  1.8979391 ],
                [ 1.2541127 ,  0.28918207, 99.37522   ,  3.9202127 , 99.65397   , 95.67408   ],
                [ 1.8367959 ,  0.37423372,  0.52410626,  0.9470842 ,  0.27238303, 98.64126   ],
                [ 3.512603  , 99.32944   , 99.71968   ,  3.450934  ,  0.83546853, 99.260796  ],
                [ 1.987719  , 99.8525    ,  0.8577773 ,  3.0705564 , 99.969315  ,  0.30420953]]],            dtype=float32)
# ---
# name: TestDeepSolid.test_wf
  DeviceArray(0.8603, dtype=float32)
# ---
# name: TestFermiNet.test_kinetic
  Array(0.2784566, dtype=float32)
# ---
# name: TestFermiNet.test_potential
  Array(-0.7828356, dtype=float32)
# ---
# name: TestFermiNet.test_walk
  Array([[[0.4166998, 0.2729937, 0.9946592],
          [-0.1636449, 0.5025202, -0.2179334],
          [0.5774042, 0.5321482, -0.83614],
          [-0.6533463, 0.2915913, 1.5937456],
          [0.479838, -0.0993455, -0.2716153],
          [-0.4078843, -2.4394894, 0.041675],
          [0.0554786, 0.2439971, -0.0937411],
          [0.2253472, 0.4246373, -0.7441298],
          [0.3037185, 1.1247488, -0.7110634],
          [0.0041618, -0.7565254, -1.5015912]]], dtype=float32)
# ---
# name: TestFermiNet.test_wf
  Array(0.1269548, dtype=float32)
# ---
# name: TestHydrogen.test_kinetic
  Array(1.0260653, dtype=float32)
# ---
# name: TestHydrogen.test_potential
  Array(-1.5260653, dtype=float32)
# ---
# name: TestHydrogen.test_walk
  Array([[[-0.0269817, -0.0194543, 0.308942],
          [0.4157366, -1.0177534, 0.7061033],
          [1.1319326, -1.5159024, -1.4163642],
          [-0.5633768, 0.0473477, 1.8883846],
          [0.062221, -0.3534039, -0.3654794]]], dtype=float32)
# ---
# name: TestHydrogen.test_wf
  Array(-0.65528, dtype=float32)
# ---
